[metadata]
name = pyengmorph
version = 4.1.2026.04
description = Python bindings for libmorph::eng
long_description = file: README.md
long_description_content_type = text/markdown
author = Andrey Kovalenko aka Keva
author_email = keva@rambler.ru
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Text Processing :: Linguistic

[options]
zip_safe = False
python_requires = >=3.7

[bdist_wheel]
plat_name = manylinux2014_x86_64
