[metadata]
name = pyrusmorph
version = 4.1.0
description = Python bindings for Russian morphology
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your@email.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Text Processing :: Linguistic

[options]
zip_safe = False
python_requires = >=3.7

[bdist_wheel]
plat_name = manylinux2014_x86_64
